[package]
name = "rudis"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-recursion = "1.1.1"
async-trait = "0.1.88"
bytes = "1.10.1"
dashmap = "6.1.0"
env_logger = "0.11.7"
log = "0.4.27"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
use = "0.0.1-pre.0"
